--- a/src/app/shared/notification/lock-team-assessment-pop-up/lock-team-assessment-pop-up.component.scss
+++ b/src/app/shared/notification/lock-team-assessment-pop-up/lock-team-assessment-pop-up.component.scss
@@ -5,21 +5,11 @@
   overflow-y: hidden !important;
 
   .imgage-content {
-    text-align: -webkit-center;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 
     .image {
-      background-color: #ffffff !important;
-      width: -webkit-fit-content;
       padding: 5px;
-      border-radius: 50%;
-
-      img {
-        border-radius: 50%;
-        width: 56px;
-
-      }
     }
   }
 
@@ -28,7 +18,6 @@
   }
 
   .div-after-img {
-    margin: 0 15px 15px;
 
     .description {
       text-align: -webkit-center;
